# Kohaku

./: .env.sample  .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  docker-compose.yml
.docs/: error_handling.md
.github/workflows/: python-ci.yml  rust-ci.yml
backend/: Cargo.toml  Dockerfile  diesel.toml
backend/src/: error.rs  main.rs
backend/src/core/: config.rs  mod.rs  scheduler.rs  scrapers.rs
backend/src/db/: mod.rs  schema.rs
backend/src/db/migrations/2025-01-26-123113_urls/: down.sql  up.sql
backend/src/db/migrations/2025-01-26-131540_hsr/: down.sql  up.sql
backend/src/handlers/: mod.rs
backend/src/hsr/: format.rs  mod.rs
backend/src/hsr/handlers/: item.rs  mod.rs
backend/src/hsr/models/: mod.rs
backend/src/hsr/models/api/: item.rs
backend/src/hsr/models/db/: item.rs
backend/src/hsr/models/parse/: item.rs
backend/src/hsr/scrapers/: item.rs  mod.rs
backend/src/scrapers/: mod.rs
client/: Dockerfile  Makefile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
client/cogs/: magiceightball.py
client/core/: client.py  comm.py  config.py
client/data/: 8ball_answers.json
client/tests/: conftest.py
client/tests/cogs/: test_magiceightball.py
client/utils/: decorators.py  help.py
discord/: Dockerfile
server/: Cargo.toml  Dockerfile  Makefile  diesel.sh
server/src/: error.rs  main.rs
server/src/db/: mod.rs  schema.rs
server/src/db/migrations/2025-12-21-100011_notification_service/: down.sql  up.sql
server/src/db/migrations/2025-12-25-142015_comm_api_keys/: down.sql  up.sql
server/src/services/: mod.rs  notifications.rs
server/src/utils/: config.rs  error.rs  mod.rs
server/src/utils/comm/: auth.rs  mod.rs  notifications.rs  ws.rs
server/src/utils/comm/auth/: api_key.rs  jwt.rs  mod.rs  models.rs  routes.rs
server/src/utils/comm/events/: dispatcher.rs  mod.rs  models.rs
server/src/utils/comm/websocket/: connection.rs  manager.rs  mod.rs  models.rs  routes.rs
server/src/utils/scheduler/: mod.rs  scheduler.rs  tasks.rs
server/src/utils/tests/: mod.rs  test_comm.rs  test_comm_auth.rs  test_config.rs  test_scheduler.rs
