[package]
name = "kohaku"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "serde_json", "64-column-tables"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
r2d2 = "0.8.10"
tokio-cron-scheduler = "0.13.0"
reqwest = "0.12.12"
scraper = "0.22.0"
once_cell = "1.20.2"
