[package]
name = "kohaku"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
diesel = { version = "2.2.12", features = ["postgres", "r2d2", "chrono", "serde_json", "64-column-tables"] }
dotenvy = "0.15.7"
once_cell = "1.21.3"
r2d2 = "0.8.10"
tokio = { version = "1.47.1", features = ["rt", "macros"] }
tokio-cron-scheduler = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
rstest = "0.26.1"
serial_test = "3.2.0"
