[package]
name = "kohaku"
version = "3.0.0"
edition = "2021"

[dependencies]
actix-rt = "2.11.0"
actix-web = "4.11.0"
actix-ws = "0.3.0"
argon2 = "0.5.3"
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.2.12", features = ["postgres", "r2d2", "chrono", "serde_json", "64-column-tables"] }
diesel_migrations = { version = "2.3.1", features = ["postgres"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
once_cell = "1.21.3"
r2d2 = "0.8.10"
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["rt", "macros"] }
tokio-cron-scheduler = "0.15.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
rstest = "0.26.1"
serial_test = "3.2.0"
